El editor crea instancias independientes para el manejo de ctrl+z

--- a/static/gencoui/css/rndr-style-dev.css
+++ b/static/gencoui/css/rndr-style-dev.css
@@ -209,7 +209,7 @@
 }
 
 
-#main img {
+/*#main img {
     position: absolute;
     right: 0;
     bottom: 0;
@@ -220,7 +220,7 @@
 }
 #main {
 	background-color: #eeeeee
-}
+}*/
 
 
 .rndr-scale { transition: all .2s ease-in-out; }
