--- a/5_rndr.tmpl
+++ b/5_rndr.tmpl
@@ -1,6 +1,7 @@
+@generics 
 from django.shortcuts import render
 from django.contrib.auth.decorators import login_required
-from django.forms.models import formset_factory
+from django.forms.models import formset_factory 
 from django.views.generic.list import ListView
 from rest_framework import viewsets
 from rest_framework import routers
