Se trabaja con la optmizacion de repositorios para no refrescar todo el arbol

--- a/templates/gencoui/rndr_editor.html
+++ b/templates/gencoui/rndr_editor.html
@@ -306,7 +306,7 @@
 		        <div class="modal-header">
 			        <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="cancel()"><span aria-hidden="true">&times;</span></button>
 			     {% verbatim %}
-		        <h4 class="modal-title">{{component_selected.nombre}} - edit Template</h4>
+		        <h4 class="modal-title">{{component_selected.nombre}} - Template</h4>
 		        {% endverbatim %}
 			    </div>
 	          <!-- <div class="arrow-up"></div> -->
@@ -413,7 +413,7 @@
 	        <div class="modal-content">
 		        <div class="modal-header">
 			        <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="cancel()"><span aria-hidden="true">&times;</span></button>
-		        	<h4 class="modal-title">{{entorno.nombre}} - add Component</h4>
+		        	<h4 class="modal-title">{{entorno.nombre}} - Component</h4>
 			    </div>
 	          <!-- <div class="arrow-up"></div> -->
 	          	<div class="modal-body">
@@ -449,7 +449,7 @@
 	        <div class="modal-content">
 		        <div class="modal-header">
 			    	<button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="cancel()"><span aria-hidden="true">&times;</span></button>
-		        	<h4 class="modal-title">{{entorno.nombre}} - edit Component</h4>
+		        	<h4 class="modal-title">{{entorno.nombre}} - Component</h4>
 			    </div>
 	          <!-- <div class="arrow-up"></div> -->
 	          	<div class="modal-body">
@@ -519,7 +519,7 @@
 						</a>
 					</div>
 					<div style="display:inline">
-						<a class="btn icon-btn btn-default"  data-dismiss="modal" data-placement="bottom"data-tt="tooltip" title="Close">
+						<a class="btn icon-btn btn-default"  data-placement="bottom"data-tt="tooltip" title="Close">
 								<span class="glyphicon btn-glyphicon glyphicon-remove img-circle" ></span>					
 						</a>
 					</div>	
