Se trabajo en el proceso de merge y se afina  la integracion con langs conversions y editor preview

--- a/templates/gencoui/rndr_editor.html
+++ b/templates/gencoui/rndr_editor.html
@@ -241,8 +241,7 @@
 	    	<div  style="margin-top:70px;">
 						
 		    	<div class="modal-header">
-
-		    		<a class="btn btn-default btn-xs" ng-click="submit()">Save</a>
+		    		<a class="btn btn-primary btn-xs" ng-click="submit()">Save</a>
 		    		<a class="btn btn-default btn-xs" ng-click="preview()">Preview</a>
 
 		   <!--  		Options
