--- a/templates/gencoui/rndr_env.html
+++ b/templates/gencoui/rndr_env.html
@@ -150,7 +150,7 @@
 							                </tr>
 						            	</table>
 										
-							  			<div style="padding: 10px;" ng-if="langs.length>0">
+							  			<div style="padding: 10px;" >
 											<!-- <p style="display:inline;">Langs</p> -->
 											<p style="display:inline;">Langs</p>
 								  			<!-- <button style="display:inline;" type="button" class="btn btn-default btn-lg btn-circle-sm">
@@ -162,7 +162,7 @@
 											</a>
 
 
-											<table class="table table-bordered" style="margin-top: 20px;">
+											<table class="table table-bordered" style="margin-top: 20px;" ng-if="langs.length>0">
 											  	<!-- <thead>
 											    	<tr style="margin-top:10px">
 											      		<th></th>
